# 2sem

./: .gitignore  README.md
dynamic_array/: CMakeLists.txt  complex_structure_definition.h  dynamic_array.c  dynamic_array.h  dynamic_array_complex.c  dynamic_array_complex.h  dynamic_array_int.c  dynamic_array_int.h  dynamic_array_structure_definition.h  main.c  test.c  test_complex.c  test_int.c
sequence/: CMakeLists.txt  animal.h  array_sequence.h  common.h  config.h  dynamic_array.h  input_in_mess.cpp  input_system.cpp  linked_list.h  linked_list_sequence.h  main.cpp  matrix.h  matrix_a.h  matrix_l.h  my_exceptions.h  my_namespace.h  sequence.h  test_dynamic_array.cpp  test_linked_link.cpp  test_linked_list.cpp  test_matrix.cpp  test_sequence.cpp
sequence/common/: exceptions.h  my_exceptions.h  my_functions.h  optional.h
sequence/dynamic_array/: dynamic_array.h  safe_dynamic_array.h
sequence/linked_list/: linked_list.h  singly_linked_list.h  singly_linked_list_base.h  singly_linked_node.h
sequence/matrix/: array_matrix.h  list_matrix.h  matrix.h
sequence/sequence/: array_sequence.h  linked_list_sequence.h  sequence.h
sequence/tests/: asserts.h  macro_and_functions_for_tests.h  macro_for_tests.h  test_dynamic_array.cpp  test_linked_list.cpp  test_matrix.cpp  test_sequence.cpp
sequence/ui/: callbacks.h  fsm.cpp  fsm.h  simple_ui.h  text_block.h  token.h  treenode.h
tic-tac-toe/: CMakeLists.txt  game.cpp  game.h  main.cpp  tree.cpp  tree.h
